# goldychess

./: Cargo.toml
src/: bitboard.rs  eval.rs  main.rs  move_search.rs  types.rs  utils.rs
