[package]
name = "goldychess"
version = "0.2.0"
authors = ["Michael Goldstein <michael@mgold.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[target.'cfg(any(windows, unix))']
rustflags = ["-C target-cpu=native"]

[profile.release]
opt-level = 3
target = "native"